--- a/models/bronze/sources.yml
+++ b/models/bronze/sources.yml
@@ -1,8 +1,10 @@
 version: 2
 sources:
   - name: raw
-    database: Training
-    schema: bronze
+    database: TRAINING
+    schema: BRONZE
     tables: 
-      - name: raw_customers
+      - name: RAW_CUSTOMERS
         description: "this table has customers which is getting from salesforce"
+        quoting:
+          identifier: true
