--- a/profiles.yml
+++ b/profiles.yml
@@ -5,7 +5,7 @@ customer_pipeline:
       type: snowflake
       account: RAXXHKB-RZ34633
       user: SAMG
-      password: AZUREtraining@123
+      password: Azuretraining123
       role: ACCOUNTADMIN
       database: TRAINING
       warehouse: COMPUTE_WH
