--- a/models/bronze/sources.yml
+++ b/models/bronze/sources.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: raw
     database: TRAINING
-    schema: BRONZE
+    schema: PUBLIC
     quoting:
       identifier: true
       database: true
