--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,7 +4,7 @@ profile: 'customer_pipeline'
 model-paths: ["models"]
 seed-paths: ["seeds"]
 models:
-  Analytics:
+  sam-training:
     bronze:
       materialized: view
       +schema: PUBLIC
